finished, took longer than i though since i needed to understand api

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         DOGGO FACTS
     </h1>
 
-    <div class="centered-box">
+    <div class="centered-box" id="centered-box">
         <p>
             Get doggo facts by clicking this button
         </p>
-        <button class="main-button">
-            Click Me!
-        </button>
     </div>
+    <button id="main-button" class="main-button">
+        Click Me!
+    </button>
+    <script src="main.js"></script>
 </body>
 </html>
